--- a/src/main/webapp/resources/ezcomp/emr/edit_patient.xhtml
+++ b/src/main/webapp/resources/ezcomp/emr/edit_patient.xhtml
@@ -24,59 +24,56 @@
                         <p:commandButton value="Save" action="#{patientController.saveSelected(cc.attrs.patient)}"
                                          ajax="false" icon="pi pi-check" iconPos="right" styleClass="ui-button-warning" />
                     </f:facet>
-                    <p:panelGrid styleClass="w-100 table table-striped">
-                        <p:row>
-                            <p:column>
+                    <div class="container-fluid">
+                        <div class="row form-group">
+                            <div class="col-md-2">
                                 <p:outputLabel value="Title:"  class="form-label" />
                                 <p:selectOneMenu id="cmbTitle" value="#{cc.attrs.patient.person.title}" class="form-control">
                                     <f:selectItem itemLabel="Select Title"  />
                                     <f:selectItems value="#{billController.title}" var="i" itemLabel="#{i.label}"
                                                    itemValue="#{i}" />
                                 </p:selectOneMenu>
-                            </p:column>
-                            <p:column colspan="5">
+                            </div>
+                            <div class="col-md-10">
                                 <p:outputLabel value="Name:" for="txtName" class="form-label" />
                                 <p:inputText id="txtName" value="#{cc.attrs.patient.person.name}" class="w-100 form-control" />
-                            </p:column>
-
-                        </p:row>
-                        <p:row>
-                            <p:column>
+                            </div>
+                        </div>
+                        <div class="row form-group">
+                            <div class="col-md-2">
                                 <p:outputLabel value="Sex:"  class="form-label" />
                                 <p:selectOneMenu id="txtNewSex" value="#{cc.attrs.patient.person.sex}" class="form-control" >
                                     <f:selectItem itemLabel="Select Gender" />
                                     <f:selectItems value="#{billController.sex}" />
                                 </p:selectOneMenu>
-                            </p:column>
-                            <p:column colspan="2">
+                            </div>
+                            <div class="col-md-4">
                                 <p:outputLabel value="Age :"  class="form-label" />
-                                <h:panelGroup id="gpAge">
-                                    <div class="row">
-                                        <div class="col-md-4">
-                                            <p:inputText autocomplete="off" id="year" placeholder="Years"
-                                                         value="#{patientController.ageYearComponant}" class="form-control" >
-                                                <f:ajax event="blur" execute="@this" render="calNewPtDob"
-                                                        listener="#{patientController.calculateDobFromAgeComponants(cc.attrs.patient)}" />
-                                            </p:inputText>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <p:inputText autocomplete="off" id="month" placeholder="months" class="form-control" 
-                                                         value="#{patientController.ageMonthComponant}">
-                                                <f:ajax event="blur" execute="@this" render="calNewPtDob"
-                                                        listener="#{patientController.calculateDobFromAgeComponants(cc.attrs.patient)}" />
-                                            </p:inputText>
-                                        </div>
-                                        <div class="col-md-4">
-                                            <p:inputText autocomplete="off" id="day" placeholder="days"
-                                                         value="#{patientController.ageDateComponant}" class="form-control" >
-                                                <f:ajax event="blur" execute="@this" render="calNewPtDob"
-                                                        listener="#{patientController.calculateDobFromAgeComponants(cc.attrs.patient)}" />
-                                            </p:inputText>
-                                        </div>
+                                <div class="row">
+                                    <div class="col-md-4">
+                                        <p:inputText autocomplete="off" id="year" placeholder="Years"
+                                                     value="#{patientController.ageYearComponant}" class="form-control" >
+                                            <f:ajax event="blur" execute="@this" render="calNewPtDob"
+                                                    listener="#{patientController.calculateDobFromAgeComponants(cc.attrs.patient)}" />
+                                        </p:inputText>
                                     </div>
-                                </h:panelGroup>
-                            </p:column>
-                            <p:column colspan="3">
+                                    <div class="col-md-4">
+                                        <p:inputText autocomplete="off" id="month" placeholder="months" class="form-control" 
+                                                     value="#{patientController.ageMonthComponant}">
+                                            <f:ajax event="blur" execute="@this" render="calNewPtDob"
+                                                    listener="#{patientController.calculateDobFromAgeComponants(cc.attrs.patient)}" />
+                                        </p:inputText>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <p:inputText autocomplete="off" id="day" placeholder="days"
+                                                     value="#{patientController.ageDateComponant}" class="form-control" >
+                                            <f:ajax event="blur" execute="@this" render="calNewPtDob"
+                                                    listener="#{patientController.calculateDobFromAgeComponants(cc.attrs.patient)}" />
+                                        </p:inputText>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
                                 <p:outputLabel value="Date of Birth:"  class="form-label" />
                                 <p:datePicker value="#{cc.attrs.patient.person.dob}" id="calNewPtDob"
                                               pattern="dd MMMM yyyy" style="border: none; padding: 0px;" yearNavigator="true"
@@ -84,54 +81,53 @@
                                     <p:ajax event="dateSelect" process="calNewPtDob" update="year month day"
                                             listener="#{patientController.calculateAgeComponantsFromDob(cc.attrs.patient)}" />
                                 </p:datePicker>
-                            </p:column>
-                        </p:row>
-                        <p:row>
-                            <p:column>
+                            </div>
+                        </div>
+                        <div class="row form-group">
+                            <div class="col-md-3">
                                 <p:outputLabel value="Phone:"  class="form-label" />
                                 <p:inputText value="#{cc.attrs.patient.person.phone}" class="form-control" />
-                            </p:column>
-                            <p:column>
+                            </div>
+                            <div class="col-md-3">
                                 <p:outputLabel value="Mobile:"  class="form-label" />
                                 <p:inputText value="#{cc.attrs.patient.person.mobile}" class="form-control" />
-                            </p:column>
-                            <p:column>
+                            </div>
+                            <div class="col-md-3">
                                 <p:outputLabel value="Email:"  class="form-label" />
                                 <p:inputText value="#{cc.attrs.patient.person.email}" class="form-control" />
-                            </p:column>
-                            <p:column>
+                            </div>
+                            <div class="col-md-3">
                                 <h:outputLabel class="form-label" value="NIC No:" />
                                 <h:panelGroup>
                                     <p:inputText autocomplete="off" id="txtNIC" value="#{cc.attrs.patient.person.nic}" class="form-control" />
                                 </h:panelGroup>
-                            </p:column>
-                        </p:row>
-                        <p:row>
-                            <p:column colspan="5">
+                            </div>
+                        </div>
+                        <div class="row form-group">
+                            <div class="col-md-12">
                                 <p:outputLabel value="Address:"  class="form-label" />
                                 <p:inputText value="#{cc.attrs.patient.person.address}" style="width: 100%;" class="form-control" />
-                            </p:column>
-                        </p:row>
-                        <p:row>
-                            <p:column>
+                            </div>
+                        </div>
+                        <div class="row form-group">
+                            <div class="col-md-6">
                                 <p:outputLabel value="PHN Number:"  class="form-label" />
                                 <p:inputText value="#{cc.attrs.patient.phn}" class="form-control" />
-                            </p:column>
-                            <p:column>
+                            </div>
+                            <div class="col-md-6">
                                 <h:outputLabel class="form-label" value="MRN No"  />
                                 <h:panelGroup>
                                     <p:inputText autocomplete="off" id="txtMrn" value="#{cc.attrs.patient.code}" class="form-control" />
                                 </h:panelGroup>
-                            </p:column>
-                        </p:row>
-                         <p:row>
-                            <p:column colspan="5">
+                            </div>
+                        </div>
+                        <div class="row form-group">
+                            <div class="col-md-12">
                                 <p:outputLabel value="Comments:"  class="form-label" />
                                 <p:inputText value="#{cc.attrs.patient.comments}" style="width: 100%;" class="form-control" />
-                            </p:column>
-                        </p:row>
-
-                    </p:panelGrid>
+                            </div>
+                        </div>
+                    </div>
                 </p:panel>
 
             </h:form>
