Closes#516 Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/emr/opd_visit.xhtml
+++ b/src/main/webapp/emr/opd_visit.xhtml
@@ -114,6 +114,88 @@
                                         <h4><p:outputLabel value="Diagnosis" ></p:outputLabel></h4>
                                     </div>
                                     <div class="card card-body" >
+                                        <div class="d-flex w-100">
+
+                                            <p:autoComplete 
+                                                id="acMedicine"
+                                                completeMethod="#{pharmaceuticalItemController.completeItem}"
+                                                value="#{patientEncounterController.encounterMedicine.prescription.item}"
+                                                var="item"
+                                                itemLabel="#{item}"
+                                                itemValue="#{item}"
+                                                placeholder="Select Medicine"
+                                                />
+                                            <p:inputText style="width: 6em;"
+                                                         id="txtDose"
+                                                         value="#{patientEncounterController.encounterMedicine.prescription.dose}"
+                                                         placeholder="Dose"/>
+                                            <p:selectOneMenu id="cmbDose" value="#{patientEncounterController.encounterMedicine.prescription.doseUnit}" >
+                                                <f:selectItem itemLabel="Select" ></f:selectItem>
+                                                <f:selectItems value="#{measurementUnitController.doseUnits}" var="du" itemLabel="#{du.name}" itemValue="#{du}" ></f:selectItems>
+                                            </p:selectOneMenu>
+                                            <p:selectOneMenu id="cmbFrequency" value="#{patientEncounterController.encounterMedicine.prescription.frequencyUnit}" >
+                                                <f:selectItem itemLabel="Select" ></f:selectItem>
+                                                <f:selectItems value="#{measurementUnitController.frequencyUnits}" 
+                                                               var="du" 
+                                                               itemLabel="#{du.name}"
+                                                               itemValue="#{du}" ></f:selectItems>
+                                            </p:selectOneMenu>
+                                            <p:inputText style="width: 6em;"
+                                                         id="txtDuration"
+                                                         value="#{patientEncounterController.encounterMedicine.prescription.duration}"
+                                                         placeholder="Duration"/>
+                                            <p:selectOneMenu id="cmbDuration" 
+                                                             value="#{patientEncounterController.encounterMedicine.prescription.durationUnit}" >
+                                                <f:selectItem itemLabel="Select" ></f:selectItem>
+                                                <f:selectItems value="#{measurementUnitController.durationUnits}" var="du" itemLabel="#{du.name}" itemValue="#{du}" ></f:selectItems>
+                                            </p:selectOneMenu>
+                                            <p:selectBooleanCheckbox id="chkIndoor" label="Indoor" value="#{patientEncounterController.encounterMedicine.prescription.indoor}" ></p:selectBooleanCheckbox>
+                                            <p:commandButton value="Add"
+                                                             id="btnAddRx"
+                                                             process="btnAddRx chkIndoor acMedicine txtDose cmbDose cmbFrequency txtDuration cmbDuration"
+                                                             update="tblRxx chkIndoor acMedicine txtDose cmbDose cmbFrequency txtDuration cmbDuration"
+                                                             action="#{patientEncounterController.addEncounterMedicine}"
+                                                             />
+
+                                        </div>
+                                        <div class="row m-2" >
+                                            <div class="col-md-12" >
+
+                                                <p:dataTable
+                                                    id="tblRxx"
+                                                    value="#{patientEncounterController.encounterMedicines}"
+                                                    var="rx">
+                                                    <p:column headerText="Prescription">
+                                                        <p:outputLabel value="#{rx.prescription.item.name} #{rx.prescription.dose % 1 == 0 ? rx.prescription.dose.intValue() : rx.prescription.dose} #{rx.prescription.doseUnit.name} #{rx.prescription.frequencyUnit.name} for #{rx.prescription.duration % 1 == 0 ? rx.prescription.duration.intValue() : rx.prescription.duration} #{rx.prescription.durationUnit.name} (#{rx.prescription.indoor ? 'indoor' : 'outdoor'})">
+                                                        </p:outputLabel>
+                                                        <p:spacer height="1" width="5" ></p:spacer>
+                                                        <p:commandLink value="X" class="text-danger" 
+                                                                       id="btnDeleteRx"
+                                                                       process="btnDeleteRx"
+                                                                       update="tblRxx"
+                                                                       onclick="if (!confirm('Are you sure you want to delete this allergy?'))
+                                                                                   return false;"
+                                                                       action="#{patientEncounterController.removePatientDiagnosis()}"
+                                                                       >
+                                                            <f:setPropertyActionListener target="#{patientEncounterController.removingClinicalFindingValue}" value="#{rx}"/>
+                                                        </p:commandLink>
+                                                        <p:tooltip value="Delete" for="btnDeleteRx" ></p:tooltip>
+                                                    </p:column>
+                                                </p:dataTable>
+
+
+
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+
+
+                                <div class="card m-2" >
+                                    <div class="card card-header" >
+                                        <h4><p:outputLabel value="Diagnosis" ></p:outputLabel></h4>
+                                    </div>
+                                    <div class="card card-body" >
 
                                         <p:autoComplete id="acDx" value="#{patientEncounterController.diagnosis}"
                                                         completeMethod="#{diagnosisController.completeDiagnosis}"
@@ -313,14 +395,14 @@
                                     </div>
                                 </div>
 
-                            
+
 
 
 
                             </td>
                         </tr>
 
-                    
+
 
 
                     </table>
