Signed-off-by: Dr M H Buddhika Ariyaratne <buddhika.ari@gmail.com>

--- a/src/main/webapp/clinical/clinical_diagnosis.xhtml
+++ b/src/main/webapp/clinical/clinical_diagnosis.xhtml
@@ -46,7 +46,7 @@
 
                         <div class="col-md-6">
                             <p:panel>
-                                <h:panelGrid id="gpDetail">
+                                <h:panelGroup id="gpDetail">
                                     <div class="form-group row">
                                         <label for="txtName" class="col-sm-2 col-form-label">Name</label>
                                         <div class="col-sm-10">
@@ -75,7 +75,7 @@
                                             </p:commandButton>
                                         </div>
                                     </div>
-                                </h:panelGrid>
+                                </h:panelGroup>
                             </p:panel>
                         </div>
                     </div>
