--- a/src/main/webapp/reportInstitution/all_bills.xhtml
+++ b/src/main/webapp/reportInstitution/all_bills.xhtml
@@ -5,19 +5,13 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
-
-    <body>
-
+    <h:body>
         <ui:composition template="./report_list.xhtml">
-
             <ui:define name="report">
-
                 <p:panel>
                     <f:facet name="header" >
                         <h:outputLabel value="All BILL List"/>                          
                     </f:facet>
-
-
                     <h:panelGrid columns="2" >
                         <h:outputLabel value="From Date"/>
                         <p:datePicker styleClass="dateTimePicker" 
@@ -141,6 +135,5 @@
             </ui:define>
 
         </ui:composition>
-
-    </body>
+    </h:body>
 </html>
