--- a/src/main/webapp/reportIncome/bill_type_summery.xhtml
+++ b/src/main/webapp/reportIncome/bill_type_summery.xhtml
@@ -24,11 +24,18 @@
                                     <p:calendar id="toDate" value="#{billSearch.toDate}" navigator="false" pattern="dd MMMM yyyy hh mm ss a" >
                                         <f:ajax event="dateSelect" execute="tblBills cmbUser"  render="tblBills toDate fromDate"/>
                                     </p:calendar>
+                                    <h:outputLabel value="Institution"/>                                
+                                    <p:selectOneMenu value="#{billSearch.institution}" >
+                                        <f:selectItem itemLabel="All Departments" ></f:selectItem>
+                                        <f:selectItems value="#{sessionController.loggableInstitutions}" var="d" itemLabel="#{d.institution.name} - #{d.name}" itemValue="#{d}" ></f:selectItems>
+                                    </p:selectOneMenu>
+
                                     <h:outputLabel value="Department"/>                                
                                     <p:selectOneMenu value="#{billSearch.department}" >
                                         <f:selectItem itemLabel="All Departments" ></f:selectItem>
                                         <f:selectItems value="#{sessionController.loggableDepartments}" var="d" itemLabel="#{d.institution.name} - #{d.name}" itemValue="#{d}" ></f:selectItems>
                                     </p:selectOneMenu>
+
                                     <h:outputLabel value="Type"/>                                
                                     <p:selectOneMenu value="#{billSearch.billType}" >
                                         <f:selectItem itemLabel="All Types" ></f:selectItem>
@@ -50,7 +57,7 @@
                                 </p:panelGrid>
                                 <p:panelGrid columns="3" >
 
-                                    <p:commandButton  value="Process" ajax="false" action="#{billSearch.fillBillTypeSummery}" styleClass="noPrintButton">
+                                    <p:commandButton  value="Process" ajax="false" action="#{billSearch.fillTransactionTypeSummery()}" styleClass="noPrintButton">
                                     </p:commandButton>
 
 
@@ -59,9 +66,9 @@
 
                                     <p:commandButton  value="Export as Excel" ajax="false" styleClass="noPrintButton" >
                                         <p:dataExporter type="xlsx" target="tblBills" fileName="Bill Data"
-                                                       
-                                                            
-                                                       />
+
+
+                                                        />
                                     </p:commandButton>
 
 
